# starly

./: .dockerignore  .gitignore  ARCHITECTURE.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
scripts/: seed.py
src/app/: main.py
src/app/api/: admin.py  ingest.py  queries.py  schemas.py
src/app/cache/: realtime.py
src/app/core/: config.py  logging.py  middleware.py
src/app/domain/: events.py
src/app/queue/: protocol.py  simulated.py
src/app/storage/: es.py  mongo.py  types.py
src/app/worker/: consumer.py
tests/integration/: conftest.py  test_dlq.py  test_es_storage.py  test_lifecycle.py  test_mongo_storage.py  test_realtime.py  test_search_lifecycle.py  test_worker_pipeline.py
tests/unit/: test_admin_api.py  test_cache.py  test_domain.py  test_ingest_api.py  test_query_api.py  test_queue.py  test_ratelimit.py  test_worker.py
