[project]
name = "event-processing-platform"
version = "0.1.0"
description = "Distributed event processing platform: FastAPI + MongoDB + Elasticsearch + Redis"
requires-python = ">=3.12"
dependencies = [
    "elasticsearch>=8,<9",
    "fastapi>=0.139.0",
    "pydantic-settings>=2.14.2",
    "pymongo>=4.17",
    "redis>=8.0.1",
    "uuid6>=2025.0.1",
    "uvicorn>=0.51.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/app"]

[tool.fastapi]
entrypoint = "app.main:app"

[tool.ruff]
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-m 'not integration'"
markers = [
    "integration: requires services from docker compose; excluded by default",
]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "ruff>=0.15.20",
]
